<resources>
    <string name="app_name">calculator</string>
    <string name="del_label">DEL</string>
    <string name="del_label">DEL</string>
    <string name="equal_label">=</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="div_label">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply_label">*</string>
    <string name="point_label">.</string>
    <string name="_0">0</string>
    <string name="modulo_label">%</string>
    <string name="plus_label">+</string>
</resources>
