<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/start_expression"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="end"
        android:ellipsize="start"
        android:singleLine="true"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/end_resultat"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="30sp"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/del_button"
                android:text="@string/del_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>

            <TextView
                android:id="@+id/equal_button"
                android:text="@string/equal_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/one_button"
                android:text="@string/_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/two_button"
                android:text="@string/_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/tree_button"
                android:text="@string/_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/div_button"
                android:text="@string/div_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/four_button"
                android:text="@string/_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/five_button"
                android:text="@string/_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/six_button"
                android:text="@string/_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/sous_button"
                android:text="-"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/seven_button"
                android:text="@string/_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/height_button"
                android:text="@string/_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/nine_button"
                android:text="@string/_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/multiply_button"
                android:text="@string/multiply_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/point_button"
                android:text="@string/point_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/zero_button"
                android:text="@string/_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/modulo_button"
                android:text="@string/modulo_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
            <TextView
                android:id="@+id/add_button"
                android:text="@string/plus_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_margin="0.5dp"/>
        </TableRow>


    </TableLayout>

</TableLayout>